# snake_bevy

./: Cargo.toml  contributing.md  index.html  readme.md
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: ai.rs  apple.rs  asset_loader.rs  blink.rs  collision.rs  coordinate.rs  direction.rs  game_state.rs  lib.rs  main.rs  main_menu.rs  movement.rs  schedule.rs  score.rs  snake.rs  win.rs
tests/: game_systems.rs
