[package]
name = "snake_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.1"
rand = "0.8.5"
bevy_egui = "0.29"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", rev = "c15d0e6" } # TODO: hotfix while https://github.com/Leafwing-Studios/leafwing-input-manager/issues/602 is not released. We need to move to the new release once it's out.


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimizations taken from https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
