[package]
name = "snake_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_audio",
    "bevy_animation",
    "bevy_asset",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "vorbis",
    "x11",
    "webgl2",
] }
rand = "0.8.5"
bevy_egui = "0.37"
leafwing-input-manager = "0.18"
getrandom = { version = "0.2", features = ["js"] }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimizations taken from https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
