[package]
name = "snake_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.17"
rand = "0.8.5"
bevy_egui = "0.38"
leafwing-input-manager = "0.18"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimizations taken from https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
